Fixing logo display on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,14 @@ body {
     width: 50%;
 }
 
+.parallaxer .profit-section {
+    margin: 1em auto;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
 .parallaxer .timer {
     display: inline-block;
     padding: 0 0.8em;
@@ -169,7 +177,6 @@ body {
     color: #3d3463;
     font-size: 20pt;
     margin:auto;
-    
 }
 
 .center-content {
@@ -650,14 +657,28 @@ animation-delay: -0.16s;
     }
 
     .parallaxer .item .logo img{
-        width: 100%;
+        width: 60%;
     }
+
+    .parallaxer .org-logo {
+      width: 50px;  
+    }
+    
+
     
     .parallaxer .timer {
         padding: 0 0.8em;
         line-height: 40px;
         background-size: contain;
         font-size: 12pt;
+    }
+
+    .parallaxer .profit-section {
+        margin: 1em auto;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
     }
 
     #live-stream .top {
